Media Tags, aside
media tags updated
aside color changed to grey

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="css/SDGstyle.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <main>
+  <div id="wrapper">
      <header>
     <img src="img/SDGOne.png" alt="Software Development Guild" />
   </header>
@@ -20,7 +20,6 @@
 
   <section class="left-pane">
     <article>  
-      <section class="text">
       <h2>The Guild</h2>
         <p>
             The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
@@ -28,7 +27,6 @@
         <p>
           The Guild meets on Tusedays during the Spring and Fall semesters, meetings are from <time>4pm to 5pm</time>. To join the Guild just come to a meeting! Don't let busy schedules stop you, if you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
         </p>
-      </section>
     </article>
     <aside>
       <h3>Current Members</h3>
@@ -47,7 +45,7 @@
       <p>&copy; 2017 Software Develpment Guild</p>
     </section>
   </footer>
-  </main>
+  </div>
  
 
 </body>
