--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
       <a id="nav-projects" href="html/projects.html">Projects</a>
   </nav>
 
-  <section class="left-pane">
-    <article>  
+  <section class="content">
+    <article class="left-pane">  
       <h2>The Guild</h2>
         <p>
             The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
         </p>
         <p>
-          The Guild meets on Tusedays during the Spring and Fall semesters, meetings are from <time>4pm to 5pm</time>. To join the Guild just come to a meeting! Don't let busy schedules stop you, if you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
+          The Guild meets Tuesdays during Spring and Fall Semester.
+        </p>
+        <p class="font-size-down">Meetings are from <time>4:00pm to 5:00pm</time>. 
+        </p>
+        <p class="font-size-down-center">
+         if you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
         </p>
     </article>
     <aside>
@@ -37,8 +42,8 @@
 
   <footer>
     <section id="contact">
-      <h4>Contact:</h4>
-      <p>President Namey McNamerson</p>
+      <h4>Contact:&nbsp;</h4>
+      <p>President Namey McNamerson&nbsp;</p>
       <p><a href="mailto:MR_prezzz@dudeguy.com">MR_prezzz@dudeguy.com</a></p>
     </section>
     <section id="copyright">
