--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </header>
   
   <nav>
-      <a id="nav-index" href="../index.html">Home</a>
-      <a id="nav-about" href="html/about.html">About</a>
-      <a id="nav-projects" href="html/projects.html">Projects</a>
+        <a id="nav-index" href="#">Home</a>
+        <a id="nav-about" href="#">About</a>
+      <a id="nav-projects" href="#">Projects</a>
   </nav>
 
   <section class="content">
