new style page added
some changes made, as well as a new stylepage trying out a different look

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <script src="https://use.fontawesome.com/4c9c134f39.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8"/>
   <title>SDG Home</title>
@@ -8,17 +9,23 @@
 </head>
 <body>
   <div id="wrapper">
-     <header>
-    <img src="img/SDGOne.png" alt="Software Development Guild" />
-  </header>
-  
   <nav>
         <a id="nav-index" href="#">Home</a>
         <a id="nav-about" href="#">About</a>
       <a id="nav-projects" href="#">Projects</a>
   </nav>
+  <header>
+    <img src="img/SDGOne.png" alt="Software Development Guild" />
+    <h1>Software Development Guild</h1>
+    <a href="https://github.com/Demibro/Stark-State-College-SDG-App"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+    <i class="fa fa-facebook-square" aria-hidden="true"></i>
 
-  <section class="content">
+
+
+  </header>
+  
+
+  
     <article class="left-pane">  
         <section class="about">
           <h2>The Guild</h2>
@@ -39,7 +46,8 @@
       <p>Pres. Namey McNamerson</p>
       <p>Sec. Guy Manderson</p>
    </aside>
-  </section>
+  </div>
+  
 
   <footer>
     <section id="contact">
@@ -48,10 +56,9 @@
       <p><a href="mailto:MR_prezzz@dudeguy.com">MR_prezzz@dudeguy.com</a></p>
     </section>
     <section id="copyright">
-      <p>&copy; 2017 Software Develpment Guild</p>
+      <p>&copy; 2017 Software Development Guild</p>
     </section>
   </footer>
-  </div>
  
 
 </body>
