Adding new files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <script src="https://use.fontawesome.com/4c9c134f39.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8"/>
   <title>SDG Home</title>
@@ -9,42 +8,38 @@
 </head>
 <body>
   <div id="wrapper">
-  <nav>
-        <a id="nav-index" href="#">Home</a>
-        <a id="nav-about" href="#">About</a>
-      <a id="nav-projects" href="#">Projects</a>
-  </nav>
-
-  <header>
+     <header>
     <img src="img/SDGOne.png" alt="Software Development Guild" />
-    <h1>Software Development <br> Guild</h1>
-    <a href="https://github.com/Demibro/Stark-State-College-SDG-App"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-    <i class="fa fa-facebook-square" aria-hidden="true"></i>
   </header>
   
-  <article class="main-column">  
-    <section class="about">
-      <h2>The Guild</h2>
-      <p>
-        The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
-      </p>  
-    </section>
-    
-    <section class="meeting-info"> 
-      <h3>Meetings are Tuesday from <time>4:00pm to 5:00pm</time>
-      </h3>
-      <p>
-       if you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
-      </p>
-    </section>
-  </article>
+  <nav>
+        <a id="nav-index" href="index.html">Home</a>
+        <a id="nav-about" href="#">About</a>
+      <a id="nav-projects" href="calendar.html">Event Calendar</a>
+  </nav>
 
-  <aside>
-    <h3>Officers</h3>
-    <p>Pres. Namey McNamerson</p>
-    <p>Sec. Guy Manderson</p>
-  </aside>
-
+  <section class="content">
+    <article class="left-pane">  
+        <section class="about">
+          <h2>The Guild</h2>
+          <p>
+              The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
+          </p>  
+        </section>
+        <section class="meeting-info"> 
+          <p class="font-size-down">Meetings are Tuesday from <time>4:00pm to 5:00pm</time>. 
+          </p>
+          <p class="font-size-down-center">
+          If you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
+          </p>
+        </section>
+    </article>
+    <aside>
+      <h3>Officers</h3>
+      <p>Pres. Namey McNamerson</p>
+      <p>Sec. Guy Manderson</p>
+   </aside>
+  </section>
 
   <footer>
     <section id="contact">
@@ -53,11 +48,11 @@
       <p><a href="mailto:MR_prezzz@dudeguy.com">MR_prezzz@dudeguy.com</a></p>
     </section>
     <section id="copyright">
-      <p>&copy; 2017 Software Development Guild</p>
+      <p>&copy; 2017 Software Develpment Guild</p>
     </section>
   </footer>
- 
   </div>
+ 
 
 </body>
 </html>
