--- a/index.html
+++ b/index.html
@@ -5,46 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8"/>
   <title>SDG Home</title>
-  <link href="css/SDGstyle.css" rel="stylesheet" type="text/css"/>
+  <link href="css/SDGstyle3.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <div id="wrapper">
   <nav>
-        <a id="nav-index" href="#">Home</a>
-        <a id="nav-about" href="#">About</a>
+    <div class="nav-img"><img src="img/grnSDG.png" alt="cat"></div>
+    <div class="nav-links">
+      <a id="nav-index" href="#">Home</a>
+      <a id="nav-about" href="#">About</a>
       <a id="nav-projects" href="#">Projects</a>
+   </div> 
   </nav>
 
   <header>
-    <img src="img/SDGOne.png" alt="Software Development Guild" />
-    <h1>Software Development <br> Guild</h1>
+    <img src="img/SDGOne.png" alt="Software Development Guild"/>
+    <h1>Software</h1><h1>Development</h1><h1>Guild</h1>
     <a href="https://github.com/Demibro/Stark-State-College-SDG-App"><i class="fa fa-github-square" aria-hidden="true"></i></a>
     <i class="fa fa-facebook-square" aria-hidden="true"></i>
   </header>
   
-  <article class="main-column">  
+  <article class="main">  
+    
     <section class="about">
       <h2>The Guild</h2>
       <p>
-        The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
+          The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
       </p>  
     </section>
-    
-    <section class="meeting-info"> 
-      <h3>Meetings are Tuesday from <time>4:00pm to 5:00pm</time>
-      </h3>
-      <p>
-       if you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
-      </p>
+   
+    <section class="officers">
+      <table>
+        <th colspan="3"><h2>Officers</h2></th>
+        <tr>
+          <td><img src="img/advis.png" alt="Advisor"/><p>Advisor Sharon Hoover</p></td>
+          <td><img src="img/pres.png" alt="President"/><p>President Devin Brough</p></td>
+        </tr>
+        <tr>  
+          <td><img src="img/open.png" alt="Vice-President"/><p>Vice-President David Sarnor</p></td>
+          <td><img src="img/admin.png" alt="Admin"/><p>Administrative Assistant Quinntin Duong</p></td>
+        </tr>
+        </tr>
+        <tr>
+          <td><img src="img/web.png"/><p>Web Master Jason Helsel</p></td>
+          <td><img src="img/open.png"/><p>Event Coordinator TBD</p></td>
+        </tr>
+      </table>
     </section>
+
   </article>
-
-  <aside>
-    <h3>Officers</h3>
-    <p>Pres. Namey McNamerson</p>
-    <p>Sec. Guy Manderson</p>
-  </aside>
-
+  <section class="meeting-info"> 
+    <h3>Meetings are Tuesday from <time>4:00pm to 5:00pm</time>
+    </h3>
+    <p>
+     If you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
+    </p>
+  </section>
 
   <footer>
     <section id="contact">
