--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="about">
       <h2>The Guild</h2>
       <p>
-          The Software Development Guild is a gathering of student software developers who seek to further advance their craft through collaboration outside of the classroom. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
+          The Software Development Guild is a gathering of student developers who seek to further advance their craft through collaboration. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
       </p>  
     </section>
    
@@ -53,14 +53,15 @@
       </table>
     </section>
 
+    <section class="meeting-info"> 
+      <h3>Meetings are Tuesday from <time>4:00pm to 5:00pm</time>
+      </h3>
+      <p>
+       If you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
+      </p>
+    </section>
   </article>
-  <section class="meeting-info"> 
-    <h3>Meetings are Tuesday from <time>4:00pm to 5:00pm</time>
-    </h3>
-    <p>
-     If you would like to join but can't make it to the meetings contact the project manager at <a href="mailto:MR/MRS_Manager@dudeguy.com">MR/MRS_Manager@dudeguy.com</a> to see what you can do to help on our next project!
-    </p>
-  </section>
+  
 
   <footer>
     <section id="contact">
