--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <section class="about">
       <h2>The Guild</h2>
       <p>
-          The Software Development Guild is a gathering of student developers who seek to further advance their craft through collaboration. The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
+          The Software Development Guild is a gathering of student developers who seek to further advance their craft through collaboration. 
+      </p>
+      <p>
+        The Guild serves as a meeting place for students of all backgrounds and understanding who seek to better understand software components and the development cycle. 
       </p>  
     </section>
    
@@ -70,7 +73,7 @@
       <p><a href="mailto:MR_prezzz@dudeguy.com">MR_prezzz@dudeguy.com</a></p>
     </section>
     <section id="copyright">
-      <p>&copy; 2017 Software Development Guild</p>
+      <p>&copy; 2017 SSC Software Development Guild</p>
     </section>
   </footer>
  
